# gitfluff

./: .gitignore  .goreleaser.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  README.md  ai-rulez.yaml
.github/workflows/: ci.yml  publish.yaml  publish.yml  release-homebrew.yml  release.yml
npm-package/: README.md  index.js  install.js  package.json
pip-package/: README.md  pyproject.toml
pip-package/gitfluff/: __init__.py
src/: cli.rs  config.rs  hooks.rs  lint.rs  main.rs  presets.rs
tests/: cli.rs
