[package]
name = "gitfluff"
version = "0.3.1"
edition = "2024"
description = "Commit message linting tool with presets, custom formats, and cleanup automation."
license = "MIT"
repository = "https://github.com/Goldziher/gitfluff"
homepage = "https://github.com/Goldziher/gitfluff"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
